--- a/docker/web/Dockerfile
+++ b/docker/web/Dockerfile
@@ -3,11 +3,9 @@ FROM node:14.2-alpine
 ENV TZ Asia/tokyo
 
 RUN apk update \
-  && apk add --update --no-cache --virtual=.build-dependencies g++
-
-COPY --from=node /usr/local/bin /usr/local/bin
-COPY --from=node /usr/local/lib /usr/local/lib
-COPY --from=node /opt /opt
+  && apk add --update --no-cache --virtual=.build-dependencies g++ && \
+  apk add --no-cache curl && \
+  curl -o- -L https://yarnpkg.com/install.sh | sh
 
 WORKDIR /app
 
