--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# macOS
 .DS_Store
 
 ### Node ###
@@ -109,6 +110,16 @@ dist/
 
 # Serverless directories
 .serverless/
+
+
+# IDE / Editor
+.idea
+
+# Service worker
+sw.*
+
+# Vim swap files
+*.swp
 
 # FuseBox cache
 .fusebox/
