add script in Makefile and mod yml file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,9 @@ services:
       dockerfile: ./docker/web/Dockerfile
     ports:
       - '3000:3000'
+    environment:
+      PORT: '3000'
+      HOST: '0.0.0.0'
     volumes:
       - ./:/app
     tty: true
