--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.13.1",
+    "@nuxtjs/proxy": "^2.1.0",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3"
   },
@@ -32,8 +34,11 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.7.0",
+    "fibers": "^5.0.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "sass": "^1.35.1",
+    "sass-loader": "^12.1.0",
     "stylelint": "^13.12.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^21.0.0",
